# desktop

./: .gitignore  CLAUDE.md  README.MD  binding.gyp  build.cmd  electron-builder.yml  forge.config.js  jest.config.js  jest.integration.config.js  package-lock.json  package.json  playwright.config.ts  setupSerialport.cmd
.github/workflows/: apptest.yaml  linux-build.yml  mac-build.yml  pr.yml  win-build.yml  win7-build.yml
app-tests/: launch.test.mjs  pages.test.mjs
bleserver/: Cargo.toml
bleserver/src/: ipc.rs  main.rs  utils.rs
bleserver/src/ble/: events.rs  mod.rs
bleserver/src/ble/handlers/: device.rs  mod.rs  notification.rs  state.rs
bleserver/src/commands/: characteristics.rs  connect.rs  disconnect.rs  mod.rs  ping.rs  read.rs  scan.rs  services.rs  subscribe.rs  write.rs
config/: forge.config.appstore.js  forge.config.darwin.appstore.js  forge.config.darwin.incyclist.js  forge.config.darwin.unsigned.js  forge.config.incyclist.js  forge.config.linux.snap.js  forge.config.snap.js  forge.config.windows.js  forge.config.windows.unsigned.js  linux64-installer.json  linuxarm64-installer.json  win32-installer.json  win32-package.json  win64-installer.json  win64-package-dev.json  win64-package.json  win7-64-installer.json
docs/: ci-workflows.md
entitlements/: incyclist.mas.plist
profiles/: AppStore.provisionprofile  Distribution.provisionprofile  IncyclistAppStore.plist
scripts/: prepare-build.js  update-react.js  update-web-bundle.js  win-installer.js  win-package.js  win-sign.js
src/: app.js  main.js
src/web/: api.js  (+3 more)
testdata/: activity.fit
(+109 files in other folders)
