[package]
name = "bleserver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
byteorder = "1"
futures = "0.3"
btleplug = "0.11"
futures-util = "0.3.31"
hex = "0.4.3"
regex = "1.12.2"
uuid = "1.18.1"
